Update card image

--- a/simulacion/public/index.html
+++ b/simulacion/public/index.html
@@ -6,16 +6,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Estimación de sueldo de IT dinámica basada en la encuesta de sysarmy 2020.1"
+      content="Estimación de sueldo de IT dinámica basada en la encuesta de sysarmy 2020.2"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Estimación Sueldo 2020.1</title>
+    <title>Estimación Sueldo 2020.2</title>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@seppo0011" />
-    <meta property="og:url" content="https://seppo0010.github.io/sysarmy-sueldos-2020.1/" />
-    <meta property="og:title" content="Estimación Sueldo 2020.1" />
+    <meta property="og:url" content="https://seppo0010.github.io/sysarmy-sueldos-2020.2/" />
+    <meta property="og:title" content="Estimación Sueldo 2020.2" />
     <meta property="og:description" content="Formulario interactivo para estimar sueldos de tecnología" />
-    <meta property="og:image" content="https://seppo0010.github.io/sysarmy-sueldos-2020.1/text/prediccion-de-sueldo/mapsalary.png" />
+    <meta property="og:image" content="https://seppo0010.github.io/sysarmy-sueldos-2020.2/image.png" />
     <link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/skeleton.css" />
     <link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/normalize.css" />
   </head>
