--- a/simulacion/public/index.html
+++ b/simulacion/public/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://seppo0010.github.io/sysarmy-sueldos-2020.2/" />
     <meta property="og:title" content="Estimación Sueldo 2020.2" />
     <meta property="og:description" content="Formulario interactivo para estimar sueldos de tecnología" />
-    <meta property="og:image" content="https://seppo0010.github.io/sysarmy-sueldos-2020.2/public/image.png" />
+    <meta property="og:image" content="https://seppo0010.github.io/sysarmy-sueldos-2020.2/image.png" />
     <link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/skeleton.css" />
     <link type="text/css" rel="stylesheet" href="%PUBLIC_URL%/normalize.css" />
   </head>
